--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^5.42.0",
+    "firebase": "^12.5.0",
+    "firebase-admin": "^13.5.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-instantsearch": "^7.17.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "zod": "^4.1.12"
