--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:firebase": "tsx -r dotenv/config scripts/test-firebase.ts",
+    "test:algolia": "tsx -r dotenv/config scripts/test-algolia.ts",
+    "test:api": "tsx -r dotenv/config scripts/test-api-endpoints.ts",
+    "test:api:simple": "tsx -r dotenv/config scripts/test-api-simple.ts",
+    "list:posts": "tsx -r dotenv/config scripts/list-posts.ts",
+    "list:all-posts": "tsx -r dotenv/config scripts/list-all-posts.ts",
+    "seed:posts": "tsx -r dotenv/config scripts/seed-sample-posts.ts",
+    "sync:algolia": "tsx -r dotenv/config scripts/sync-algolia.ts",
+    "test:all": "npm run test:firebase && npm run test:algolia && npm run test:api"
   },
   "dependencies": {
     "algoliasearch": "^5.42.0",
@@ -29,10 +38,13 @@
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
